# hikachi

./: CMakeLists.txt  README.md
shader/: default.frag  default.vert
src/: camera.cpp  camera.h  glad.c  main.cpp  main.h  shader.cpp  shader.h
